- Added new Structures! 
	- The End will now generate a structure dedicated to the Maykrs and the only place they will spawn! 
	- The Nether will now generate Titan skulls. These skulls show signs of being transformed into a place of Worship though it seems they were abandoned.
	- The Overworld will now generate massive portals, similar to ruined portals but bigger and can spawn the mods mobs.
- Scaled up the OG Cyberdemon.
- Icon of Sin attack has been redone.
- Redid Arachnotron and Spider Mastermind animations!
- Lowered the sound of the chainsaws.
- Demons are now able to walk on Lava like striders.
- Fixed not being able to search for the armors or a few weapons in the creative search menu.
- BFG Eternal, Heavy Cannon, Pistol, Plasma Gun, Rocketlauncher, Shotgun, Super Shotgun, and Unmaykr now use the bow animations for aiming.
- Fixed the Crucible Blade glitching open and closed.
- Massively increased cool down of Gore Nest Spawns and added a max of 3 waves per gore nest.
- Halved all demons (expect the Icon of Sin) follow ranges to 25, in line with vanilla mobs.
- Fixed weapons not being able to use ammo in the off hand for reloading weapons.
- Fixed Marauder Axe not being reloadable with the Argent Blocks like the Crucible.
- More Goal related null checks added because bad "performance" mods.
- Prowler now better teleports after attacking.
- Pain Elemental attacking animation updated to match new style.
- Hell Knight 2016/Dreadknight now performs his slam attack.
- Dreadknight Hand Blades redone.
- Added Ghast Tears to the drops of the boss tier demons loot tables.
- BFG now properly hurting the Ender Dragon.
- Icon of Sin blocks now face the proper way when built and look correct.

## Not yet implemented but assets and code are in-process awaiting creation of models ## 
	- Gargoyle remodel
	- Baron 2016
	- Fireborne Baron
	- Armored Baron
	- Pinky 2016
	- Whiplash
	- Doom Hunter
	- Maykr Drones
	- Blood Maykrs
	- Arch Makyr