@@ -109,9 +109,11 @@ public class DoomMod {
 		modEventBus.addListener(this::setup);
 		modEventBus.addListener(this::clientSetup);
 		modEventBus.addListener(this::enqueueIMC);
-		DoomStructures.DEFERRED_REGISTRY_STRUCTURE.register(modEventBus);
-		forgeBus.addListener(EventPriority.NORMAL, this::addDimensionalSpacing);
-		forgeBus.addListener(EventPriority.HIGH, this::biomeModification);
+		if (Config.SERVER.ENABLE_STRUCTURES) {
+			DoomStructures.DEFERRED_REGISTRY_STRUCTURE.register(modEventBus);
+			forgeBus.addListener(EventPriority.NORMAL, this::addDimensionalSpacing);
+			forgeBus.addListener(EventPriority.HIGH, this::biomeModification);
+		}
 		forgeBus.addGenericListener(Block.class, DoomMod::updatingBlocksID);
 		forgeBus.addGenericListener(Item.class, DoomMod::updatingItemsID);
 		MinecraftForge.EVENT_BUS.addListener(DoomVillagerTrades::onVillagerTradesEvent);
