@@ -42,10 +42,12 @@ public class Config {
 
 	public static class ServerConfig {
 
+		private final BooleanValue specENABLE_STRUCTURES;
 		private ConfigValue<Integer> specCRUCIBLE_MARAUDER_MAX_DAMAGE;
 		private final BooleanValue specENABLE_LOCKON;
 		private final BooleanValue specENABLE_BLOCK_BREAKING;
 
+		public boolean ENABLE_STRUCTURES;
 		public int CRUCIBLE_MARAUDER_MAX_DAMAGE;
 		public boolean ENABLE_LOCKON;
 		public boolean ENABLE_BLOCK_BREAKING;
@@ -72,10 +74,13 @@ public class Config {
 					.define("CRUCIBLE_MARAUDER_MAX_DAMAGE", 5);
 			builder.pop();
 			builder.push("extra");
+			specENABLE_STRUCTURES = builder
+					.comment("You can enable or disable if Doom Structures should spawn in new worlds here.")
+					.translation(DoomMod.MODID + ".config.enable_structures").define("ENABLE_STRUCTURES", true);
 			specENABLE_LOCKON = builder.comment("You can disable the lockon feature here.")
 					.translation(DoomMod.MODID + ".config.enable_lockon").define("ENABLE_LOCKON", true);
 			specENABLE_BLOCK_BREAKING = builder.comment("You can enable weapons breaking blocks.")
-					.translation(DoomMod.MODID + ".config.enable_block_breaking").define("ENABLE_BLOCK_BREAKING", true);
+					.translation(DoomMod.MODID + ".config.enable_block_breaking").define("ENABLE_BLOCK_BREAKING", false);
 			builder.pop();
 		}
 
@@ -91,6 +96,7 @@ public class Config {
 
 		public void bakeConfig() {
 			CRUCIBLE_MARAUDER_MAX_DAMAGE = specCRUCIBLE_MARAUDER_MAX_DAMAGE.get();
+			ENABLE_STRUCTURES = specENABLE_STRUCTURES.get();
 			ENABLE_LOCKON = specENABLE_LOCKON.get();
 			ENABLE_BLOCK_BREAKING = specENABLE_BLOCK_BREAKING.get();
 			entityConfig.values().forEach(config -> config.bake());
